// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Card Default renders correctly 1`] = `
<test>
  <article
    class="ecl-card"
  >
    <header
      class="ecl-card__header"
    >
      <div
        aria-label="card image"
        class="ecl-card__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-card__meta"
      >
        Meta1 | Meta2
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
    </header>
    <div
      class="ecl-card__body"
    >
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
    </div>
    <footer
      class="ecl-card__footer"
    >
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <ul
        class="ecl-card__tag-container"
      >
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 1
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 2
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 3
          </a>
        </li>
      </ul>
    </footer>
  </article>
</test>
`;

exports[`EC - Card Default renders correctly with extra attributes 1`] = `
<test>
  <article
    class="ecl-card"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <header
      class="ecl-card__header"
    >
      <div
        aria-label="card image"
        class="ecl-card__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-card__meta"
      >
        Meta1 | Meta2
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
    </header>
    <div
      class="ecl-card__body"
    >
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
    </div>
    <footer
      class="ecl-card__footer"
    >
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <ul
        class="ecl-card__tag-container"
      >
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 1
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 2
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 3
          </a>
        </li>
      </ul>
    </footer>
  </article>
</test>
`;

exports[`EC - Card Default renders correctly with extra class names 1`] = `
<test>
  <article
    class="ecl-card custom-class custom-class--test"
  >
    <header
      class="ecl-card__header"
    >
      <div
        aria-label="card image"
        class="ecl-card__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-card__meta"
      >
        Meta1 | Meta2
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
    </header>
    <div
      class="ecl-card__body"
    >
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
    </div>
    <footer
      class="ecl-card__footer"
    >
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <ul
        class="ecl-card__tag-container"
      >
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 1
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 2
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 3
          </a>
        </li>
      </ul>
    </footer>
  </article>
</test>
`;

exports[`EC - Card Default renders correctly with taxonomies 1`] = `
<test>
  <article
    class="ecl-card"
  >
    <header
      class="ecl-card__header"
    >
      <div
        aria-label="card image"
        class="ecl-card__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-card__meta"
      >
        Meta1 | Meta2
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
    </header>
    <div
      class="ecl-card__body"
    >
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
    </div>
    <footer
      class="ecl-card__footer"
    >
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <dl
        class="ecl-description-list ecl-description-list--horizontal ecl-card__list"
      >
        <dt
          class="ecl-description-list__term"
        >
          EU contribution
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          1.000.000,00 euro (100% of the overall budget)
        </dd>
      </dl>
      <dl
        class="ecl-description-list ecl-description-list--taxonomy ecl-card__list"
      >
        <dt
          class="ecl-description-list__term"
        >
          Science areas
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy and transport
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Standards
          </span>
        </dd>
        <dt
          class="ecl-description-list__term"
        >
          Keywords
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Electricity
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Electromobility
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy storage
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Security
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Transport
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Low carbon
          </span>
        </dd>
      </dl>
    </footer>
  </article>
</test>
`;

exports[`EC - Card Default with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <article
    class="ecl-card"
  >
    <header
      class="ecl-card__header"
    >
      <div
        aria-label="card image"
        class="ecl-card__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-card__meta"
      >
        Meta1 | Meta2
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        />
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
          >
            [link--standalone] - {{ link.label }} and none of {{ link.icon_position }}, {{ icon.name }}, {{ icon.path }} or {{ icon.type }} can be empty at the same time, an unusable link would be generated otherwise
          </p>
        </div>
      </h1>
    </header>
    <div
      class="ecl-card__body"
    >
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
    </div>
    <footer
      class="ecl-card__footer"
    >
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--calendar"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--location"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <ul
        class="ecl-card__tag-container"
      >
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 1
          </a>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[tag--link] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 2
          </a>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[tag--link] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 3
          </a>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[tag--link] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </li>
      </ul>
    </footer>
  </article>
  <!-- ecl2-compliance: card -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [card] -  {{ card.title.label }} property needs to set and filled in.
    </p>
  </div>
</test>
`;

exports[`EC - Card Tile renders correctly 1`] = `
<test>
  <article
    class="ecl-card ecl-card--tile"
  >
    <header
      class="ecl-card__header"
    >
      <h1
        class="ecl-card__title"
      >
        Better regulation
      </h1>
    </header>
    <div
      class="ecl-card__body"
    >
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__link-container"
      >
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 1
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 2
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 3
          </a>
        </li>
      </ul>
    </div>
    <footer
      class="ecl-card__footer"
    />
  </article>
</test>
`;

exports[`EC - Card Tile renders correctly with extra attributes 1`] = `
<test>
  <article
    class="ecl-card ecl-card--tile"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <header
      class="ecl-card__header"
    >
      <h1
        class="ecl-card__title"
      >
        Better regulation
      </h1>
    </header>
    <div
      class="ecl-card__body"
    >
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__link-container"
      >
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 1
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 2
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 3
          </a>
        </li>
      </ul>
    </div>
    <footer
      class="ecl-card__footer"
    />
  </article>
</test>
`;

exports[`EC - Card Tile renders correctly with extra class names 1`] = `
<test>
  <article
    class="ecl-card ecl-card--tile custom-class custom-class--test"
  >
    <header
      class="ecl-card__header"
    >
      <h1
        class="ecl-card__title"
      >
        Better regulation
      </h1>
    </header>
    <div
      class="ecl-card__body"
    >
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__link-container"
      >
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 1
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 2
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 3
          </a>
        </li>
      </ul>
    </div>
    <footer
      class="ecl-card__footer"
    />
  </article>
</test>
`;

exports[`EC - Card Tile renders correctly with taxonomies 1`] = `
<test>
  <article
    class="ecl-card"
  >
    <header
      class="ecl-card__header"
    >
      <h1
        class="ecl-card__title"
      />
    </header>
    <footer
      class="ecl-card__footer"
    >
      <dl
        class="ecl-description-list ecl-description-list--horizontal ecl-card__list"
      >
        <dt
          class="ecl-description-list__term"
        >
          EU contribution
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          1.000.000,00 euro (100% of the overall budget)
        </dd>
      </dl>
      <dl
        class="ecl-description-list ecl-description-list--taxonomy ecl-card__list"
      >
        <dt
          class="ecl-description-list__term"
        >
          Science areas
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy and transport
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Standards
          </span>
        </dd>
        <dt
          class="ecl-description-list__term"
        >
          Keywords
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Electricity
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Electromobility
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy storage
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Security
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Transport
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Low carbon
          </span>
        </dd>
      </dl>
    </footer>
  </article>
</test>
`;
